{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 12,
  "lineage": "44207bc5-2c19-df3c-779d-1dc346958834",
  "resources": [
    {
      "module": "module.newmod",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "module.newmod.provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.newmod",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-iap",
      "provider": "module.newmod.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.newmod",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw-ilb-to-backends",
      "provider": "module.newmod.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.newmod",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "module.newmod.provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.newmod",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "module.newmod.provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.newmod",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "ilb_network",
      "provider": "module.newmod.provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.newmod",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "ilb_subnet",
      "provider": "module.newmod.provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.newmod",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "module.newmod.provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.newmod",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "module.newmod.provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    }
  ]
}